...
        image.backgroundColor = .green
        image.layer.cornerRadius = 20
        image.clipsToBounds = true
        return image
    }()
    
    private let generateButton: UIButton = {
        let button = UIButton(type: .system)
        button.backgroundColor = .systemBlue
        button.layer.cornerRadius = 10
        button.setTitle("Generate", for: .normal)
        button.setTitleColor(.white, for: .normal)
        button.titleLabel?.font = UIFont.systemFont(ofSize: 20, weight: .bold)
...
        
        generateButton.accessibilityIdentifier = "generateButton"
        generateTextfield.accessibilityIdentifier = "generateTextfield"
    }
    
    private func createAlert(title: String, message: String) {
        let alert = UIAlertController(title: title, message: message, preferredStyle: .alert)
        let actionCopy = UIAlertAction(title: "Ok", style: .default)
        alert.addAction(actionCopy)
        self.present(alert, animated: true, completion: nil)
    }
    
    //MARK: - Actions
...
